tests/NormalTests/paczka1/fuzzy1/90227686.err
Error in line 9: U2Y A677 91,8
Error in line 10: U2Y S191 59,8
Error in line 30: nXRqBGehF A677 30,2
Error in line 33: E5Pm2HBVg A677 11,72
